--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "run-p dev:*",
     "dev:test": "http-server",
     "dev:ext": "web-ext run -s src",
-    "predev": "run-p copy:*",
+    "predev": "mkdirp src/lib && run-p copy:*",
     "copy:ficusjs": "ncp ./node_modules/ficusjs/dist/index.mjs src/lib/ficusjs.mjs",
     "copy:polyfill": "ncp ./node_modules/webextension-polyfill/dist/browser-polyfill.js src/lib/browser-polyfill.js",
     "lint:styles": "stylelint \"src/**/*.css\"",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "ficusjs": "3.8.3",
     "http-server": "13.0.2",
+    "mkdirp": "1.0.4",
     "ncp": "2.0.0",
     "npm-run-all": "4.1.5",
     "standard": "16.0.3",
